--- a/code/pom.xml
+++ b/code/pom.xml
@@ -30,5 +30,25 @@
             <version>17.0.0.1</version>
         </dependency>
     </dependencies>
+    <build>
+        <pluginManagement>
+            <plugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                  <archive>
+                    <manifest>
+                      <addClasspath>true</addClasspath>
+                      <mainClass>Experiment</mainClass>
+                    </manifest>
+                  </archive>
+                </configuration>
+              </plugin>
+            </plugins>
+        </pluginManagement>
+     </build>
+
 
 </project>
